# RAGondin

./: .env.example  .gitignore  .gitmodules  Dockerfile  Dockerfile.ray  LICENSE  README.md  README_WORKFLOW.md  api.py  app_front.py  chainlit_app.py  chainlit_fastapi.py  clean_commit_bigobj.sh  cluster.yaml  code.save  config.ini  converter_data.ipynb  converter_tests.py  converter_tests.sh  cripts  docker-compose-ray.yaml  docker-compose.yaml  dockerfile  entrypoint.sh  exp.md  fast_api.py  filter_obj.py  gitfiles_to_clean.txt  install.sh  main.py  main2.py  manage_collection.py  nohup.out  pyproject.toml  questions.md  rag.py  requirements.txt  size_commit_analyse.sh  test.md  test_copilot.html  (+3 more)
.hydra-config/: config.yaml
.hydra-config/chunker/: recursive_splitter.yaml  semantic_splitter.yaml
.hydra-config/rag/: SimpleRag.yaml
.hydra-config/retriever/: base.yaml  single.yaml
.hydra_config/: config.yaml
.hydra_config/chunker/: base.yaml  markdown_splitter.yaml  recursive_splitter.yaml  semantic_splitter.yaml
.hydra_config/llm/: base.yaml  llama.yaml  lucie.yaml  qwen.yaml
.hydra_config/rag/: ChatBotRag.yaml  SimpleRag.yaml
.hydra_config/retriever/: base.yaml  hyde.yaml  multiQuery.yaml
RAGondin.git/: config  packed-refs
app/: api.py  chainlit_app.py  launch_app.py  nohup.out  test.py
app/public/: conversation_starters.yaml
automated-evaluation-pipeline/: benchmark.py  clustering_tuning.ipynb  dataset.json  generate_questions.py  generate_questions2.py  test.py  upload_files.py
automatic_evaluation/: question_generation.py
automatic_evaluation/data_files/: list_questions.json
chainlit_app/: rag.py
compose_projects/: docker-compose.yaml
docs/: chainlit_data_persistency.md  deploy_ray_cluster.md  openai_compatibility.md  setup_indexerui.md  setup_nfs.md  setup_vpn.md
evaluation-embedder-reranker/: benchmark-gte.py  benchmark-jina_colbert.py  benchmark-jina_v2.py  benchmark-mmarco.py  benchmark.py  chunks_for_questions.py  compute_metrics.py  evaluation.md  generate_chunk_retrieval.py  generate_dataset.py  generate_evaluation_dataset.py  generate_questions.py  output_v2.json  reranker.py  retrieved-chunks-reranker.py
experiments/: RAG_proto_NB.ipynb  attentions_for_explain.ipynb
indexer-ui/: Dockerfile  package-lock.json  package.json
public/: conversation_starters.yaml
ragondin/: __init__.py  api.py  list_questions.json  main.py  manage_collection.py  mcp_api.py  mcp_client.py  mcp_server.py
ray-cluster/: start_head.sh  start_worker.sh
scripts/: compose_service.py  deploy_compose_service.py
src/: LLM.py  __init__.py  build_index_test.py  chunker.py  config.ini  config.py  embeddings.py  evaluation.py  hyde.py  llm.py  main.py  pipeline.py  pipeline2.py  prompt.py  reranker.py  retriever.py  vector_store.py
ssl/: cert.pem  key.pem  openssl.conf
tests/: api_test.robot  openai.py  openai_test.py  test_openai_api_with_requests.py  test_with_openai_lib.py
tests_brevet/: index_data.py
utility/: data_indexer.py  openai_compatibility_guide.ipynb
vdb/: milvus.yaml  qdrant.yaml
(+222 files in other folders)
