[project]
name = "ragondin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiopath>=0.7.7",
    "chainlit>=2.2.1",
    "einops>=0.8.1",
    "fastembed-gpu>=0.4.2",
    "hydra-core>=1.3.2",
    "langchain-community>=0.3.18",
    "langchain-core>=0.3.39",
    "langchain-experimental>=0.3.4",
    "langchain-huggingface>=0.1.2",
    "langchain-milvus>=0.1.8",
    "langchain-openai>=0.3.7",
    "loguru>=0.7.3",
    "marker-pdf>=0.2.17",
    "markitdown>=0.0.2",
    "pydub>=0.25.1",
    "pymupdf4llm>=0.0.17",
    "ragatouille>=0.0.9",
    "spire-doc>=13.1.0",
    "markitdown>=0.0.2",
    "openai>=1.64.0",
    "ray[default]>=2.43.0",
    "langchain-qdrant>=0.2.0",
    "python-dotenv>=1.0.1",
    "pip>=25.0.1",
    "chardet>=5.2.0",
    "openai-whisper>=20240930",
    "torch>=2.4.1",
    "mxbai-rerank>=0.1.3",
    "docling>=2.15.1",
    "robotframework>=7.2.2",
    "robotframework-requests>=0.9.7",
    "psutil>=7.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.0",
]
